# TBSKmodem

./: LICENSE  README.ja.md  README.md  Readme.en.md  Readme.ja.md  Readme.md  pyproject.toml  tbskmodem.md
doc/: RawString.md
getstarted/: step1_modulate.py  step2_demodulate.py  step3_bytedata.py  step4_text.py  step5_microphone.py  step6_realtime_receive.py
tbskmodem/: __init__.py  __main__.py
tbskmodem/kokolink/: interfaces.py
tbskmodem/kokolink/filter/: AggregateFilter.py  Bits2BytesFilter.py  Bits2StrFilter.py  BitsWidthFilter.py  ReplaceFilter.py  __init__.py
tbskmodem/kokolink/io/: reedsolomon.py
tbskmodem/kokolink/io/audio/: __init__.py  audioif.py  pyaudioio.py  sddeviceaudio.py
tbskmodem/kokolink/protocol/tbsk/: AlgorithmSwitch.py  tbskmodem.py  toneblock.py  traitblockcoder.py
tbskmodem/kokolink/streams/: BitStream.py  ByteStream.py  ChaindStream.py  RoStream.py  __init__.py  bytestreams.py  rostreams.py
tbskmodem/kokolink/toolbox/: soundkit.py
tbskmodem/kokolink/types/: __init__.py
tbskmodem/kokolink/utils/: AsyncMethod.py  AverageInterator.py  BitsWidthConvertIterator.py  BufferedIterator.py  FloatConverter.py  RecordableIterator.py  RingBuffer.py  SumIterator.py  __init__.py  basictype.py  debuglogger.py  eventlog.py  functions.py  indexsequence.py  recoverable.py  serializable.py
tbskmodem/tbskmodem_/: TbskDemodulator.py  TbskModulator.py  TbskPreamble.py  TbskTone.py  __init__.py
tbskmodem_apps/: _tbskmodem.py
test/preamble_update/: CoffPreamble.py  tbskmodem_old.py  test_new_style.py  test_new_style2.py  test_old_style.py
(+21 files in other folders)
