[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "tbskmodem"
description = "Trait block shift keying modem."
readme = "Readme.md"
classifiers = ["Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
version = "0.1.1"

[project.urls]
homepage = "https://github.com/nyatla/TBSKmodem/"

[tool.setuptools]
packages = ["tbskmodem"]


[tool.poetry.dependencies]
python = "^3.8"

dependencies = [
    "tqdm~=4.20",
    "sounddevice~=0.4.5"
]


[project.scripts]
"tbskmodem" = "tbskmodem.__main__:main"